--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the sodium correction<br> 
+    What is the sodium correction calculator?<br>
+    The sodium correction calculator is a tool that fixes the results of serum sodium [Na⁺] measurements.<br>
+    How to calculate corrected sodium?<br>
+    To calculate corrected sodium you should use the following formula:<br>
+    corrected sodium = patients sodium + 0.024 * (serum glucose - 100)<br>
+    Why use sodium correction calculator?<br>
+    The sodium correction calculator is used in order to fix the results of serum sodium [Na⁺] measurements.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
